papyrus.sequence: - Completed the first refactoring pass over the properties package. Besides some code changes, added a few TODOs to be taken care of later.

--- a/plugins/de.cau.cs.kieler.papyrus.sequence/plugin.xml
+++ b/plugins/de.cau.cs.kieler.papyrus.sequence/plugin.xml
@@ -105,7 +105,7 @@
             advanced="false"
             appliesTo="parents"
             class="de.cau.cs.kieler.papyrus.sequence.properties.LabelAlignment"
-            default="FIRST_CENTER"
+            default="SOURCE_CENTER"
             description="The strategy that is used to find the right horizontal position for message labels."
             id="de.cau.cs.kieler.papyrus.sequence.labelAlignment"
             name="Label Alignment"
