papyrus.sequence: - Completely refactored the whole algorithm into a phase structure, similar to KLay Layered. - The algorithm now uses a context object that stores important information to be passed around to the different phases. - Factoring out the application of coordinates to the source KGraph is yet to be done.

--- a/plugins/de.cau.cs.kieler.papyrus.sequence/plugin.xml
+++ b/plugins/de.cau.cs.kieler.papyrus.sequence/plugin.xml
@@ -94,7 +94,7 @@
       <layoutOption
             advanced="false"
             appliesTo="parents"
-            class="de.cau.cs.kieler.papyrus.sequence.sorter.LifelineSortingStrategy"
+            class="de.cau.cs.kieler.papyrus.sequence.p4sorting.LifelineSortingStrategy"
             default="INTERACTIVE"
             description="The sorting strategy that is used to order the lifelines horizontally."
             id="de.cau.cs.kieler.papyrus.sequence.lifelineSorting"
