--- a/plugins/de.cau.cs.kieler.papyrus.sequence/plugin.xml
+++ b/plugins/de.cau.cs.kieler.papyrus.sequence/plugin.xml
@@ -130,7 +130,7 @@
       <layoutOption
             advanced="true"
             appliesTo="parents"
-            class="de.cau.cs.kieler.papyrus.sequence.p6export.ExportStrategy"
+            class="de.cau.cs.kieler.papyrus.sequence.properties.CoordinateSystem"
             default="KGRAPH"
             description="The coordinate system the diagram's coordinates are computed for."
             id="de.cau.cs.kieler.papyrus.sequence.coordinateSystem"
