papyrus.sequence: - Destruction events now work with the KGraph coordinate system.

--- a/plugins/de.cau.cs.kieler.papyrus.sequence/plugin.xml
+++ b/plugins/de.cau.cs.kieler.papyrus.sequence/plugin.xml
@@ -48,6 +48,10 @@
          <knownOption
                option="de.cau.cs.kieler.papyrus.sequence.coordinateSystem">
          </knownOption>
+         <supportedFeature
+               feature="COMPOUND"
+               priority="0">
+         </supportedFeature>
       </layoutAlgorithm>
       
       <layoutOption
