--- a/plugins/de.cau.cs.kieler.papyrus.sequence/plugin.xml
+++ b/plugins/de.cau.cs.kieler.papyrus.sequence/plugin.xml
@@ -3,286 +3,9 @@
 <plugin>
    <extension
          point="org.eclipse.elk.core.layoutProviders">
-      <layoutType
-            description="Layout type for UML Sequence Diagrams"
-            id="de.cau.cs.kieler.papyrus.types.sequence"
-            name="UML Sequence Diagrams">
-      </layoutType>
-      <layoutAlgorithm
-            class="de.cau.cs.kieler.papyrus.sequence.SequenceDiagramLayoutProvider"
-            id="de.cau.cs.kieler.papyrus.sequence.layout"
-            name="Sequence Diagram Layouter"
-            type="de.cau.cs.kieler.papyrus.types.sequence">
-         <supportedDiagram
-               priority="15"
-               type="de.cau.cs.kieler.papyrus.diagrams.sequenceDiagram">
-         </supportedDiagram>
-         <knownOption
-               default="20"
-               option="de.cau.cs.kieler.borderSpacing">
-         </knownOption>
-         <knownOption
-               default="50"
-               option="de.cau.cs.kieler.papyrus.sequence.lifelineSpacing">
-         </knownOption>
-         <knownOption
-               default="10"
-               option="de.cau.cs.kieler.papyrus.sequence.lifelineYPos">
-         </knownOption>
-         <knownOption
-               default="50"
-               option="de.cau.cs.kieler.papyrus.sequence.messageSpacing">
-         </knownOption>
-         <knownOption
-               default="INTERACTIVE"
-               option="de.cau.cs.kieler.papyrus.sequence.lifelineSorting">
-         </knownOption>
-         <knownOption
-               default="FIRST_CENTER"
-               option="de.cau.cs.kieler.papyrus.sequence.labelAlignment">
-         </knownOption>
-         <knownOption
-               default="false"
-               option="de.cau.cs.kieler.papyrus.sequence.groupAreas">
-         </knownOption>
-         <knownOption
-               option="de.cau.cs.kieler.papyrus.sequence.coordinateSystem">
-         </knownOption>
-         <supportedFeature
-               feature="COMPOUND"
-               priority="0">
-         </supportedFeature>
-      </layoutAlgorithm>
-      <layoutOption
-            advanced="true"
-            appliesTo="parents, nodes, ports, edges, labels"
-            default="-1"
-            description="ID that uniquely identifies diagram elements."
-            id="de.cau.cs.kieler.papyrus.sequence.elementId"
-            name="Element ID"
-            type="int">
-      </layoutOption>
-      <layoutOption
-            advanced="true"
-            appliesTo="nodes"
-            class="de.cau.cs.kieler.papyrus.sequence.properties.NodeType"
-            default="LIFELINE"
-            description="The type of a node."
-            id="de.cau.cs.kieler.papyrus.sequence.nodeType"
-            name="Node type"
-            type="enum">
-      </layoutOption>
-      <layoutOption
-            advanced="true"
-            appliesTo="edges"
-            class="de.cau.cs.kieler.papyrus.sequence.properties.MessageType"
-            default="ASYNCHRONOUS"
-            description="The type of a message."
-            id="de.cau.cs.kieler.papyrus.sequence.messageType"
-            name="Message type"
-            type="enum">
-      </layoutOption>
-      <layoutOption
-            appliesTo="parents"
-            description="Area-like constructs in the diagram."
-            id="de.cau.cs.kieler.papyrus.sequence.area"
-            name="Areas"
-            type="object">
-      </layoutOption>
-      <layoutOption
-            appliesTo="parents"
-            description="List of executions in the diagram."
-            id="de.cau.cs.kieler.papyrus.sequence.executionSpecifications"
-            name="Executions"
-            type="object">
-      </layoutOption>
-      <layoutOption
-            appliesTo="nodes edges"
-            description="List of element IDs of areas a message or lifeline belongs to."
-            id="de.cau.cs.kieler.papyrus.sequence.areaIds"
-            name="Area Element IDs"
-            type="object">
-      </layoutOption>
-      <layoutOption
-            advanced="true"
-            appliesTo="nodes"
-            default="-1"
-            description="ID of the parent area of a given area, if any."
-            id="de.cau.cs.kieler.papyrus.sequence.parentAreaId"
-            name="Parent Area ID"
-            type="int">
-      </layoutOption>
-      <layoutOption
-            advanced="true"
-            appliesTo="edges"
-            default="-1"
-            description="ID of an empty area that should be placed directly above a message, if any."
-            id="de.cau.cs.kieler.papyrus.sequence.upperEmptyAreaId"
-            name="Upper Empty Area ID"
-            type="int">
-      </layoutOption>
-      <layoutOption
-            advanced="true"
-            appliesTo="nodes"
-            class="de.cau.cs.kieler.papyrus.sequence.properties.SequenceExecutionType"
-            default="EXECUTION"
-            description="The kind of execution a node represents."
-            id="de.cau.cs.kieler.papyrus.sequence.executionType"
-            name="Execution type"
-            type="enum">
-      </layoutOption>
-      <layoutOption
-            advanced="true"
-            appliesTo="edges"
-            class="java.util.List"
-            default="-1"
-            description="ID of the execution a message starts at, if any."
-            id="de.cau.cs.kieler.papyrus.sequence.executionId.source"
-            name="Source execution IDs"
-            type="object">
-      </layoutOption>
-      <layoutOption
-            advanced="true"
-            appliesTo="edges"
-            class="java.util.List"
-            default="-1"
-            description="ID of the execution a message ends at, if any."
-            id="de.cau.cs.kieler.papyrus.sequence.executionId.target"
-            name="Target execution IDs"
-            type="object">
-      </layoutOption>
-      <layoutOption
-            appliesTo="nodes"
-            description="Type of the attached element for comments."
-            id="de.cau.cs.kieler.papyrus.sequence.attachedElement"
-            name="Attached element type"
-            type="string">
-      </layoutOption>
-      <layoutOption
-            appliesTo="nodes"
-            description="The objects a comment is attached to."
-            id="de.cau.cs.kieler.papyrus.sequence.attachedTo"
-            name="Attached to"
-            type="object">
-      </layoutOption>
-      <layoutOption
-            appliesTo="nodes"
-            description="Element ID of the object a comment is attached to, if any."
-            id="de.cau.cs.kieler.papyrus.sequence.attachedToIds"
-            name="Attachted to Element IDs"
-            type="int"
-            default="-1">
-      </layoutOption>
-      <layoutOption
-            appliesTo="nodes"
-            description="The node that is the destruction event to a lifeline."
-            id="de.cau.cs.kieler.papyrus.sequence.destruction"
-            name="Destruction node"
-            type="object">
-      </layoutOption>
-      <layoutOption
-            advanced="false"
-            appliesTo="parents"
-            default="40"
-            description="The vertical spacing between two message layers."
-            id="de.cau.cs.kieler.papyrus.sequence.messageSpacing"
-            name="Message spacing"
-            type="float">
-      </layoutOption>
-      <layoutOption
-            advanced="true"
-            appliesTo="parents"
-            default="30"
-            description="Height of lifeline headers."
-            id="de.cau.cs.kieler.papyrus.sequence.lifelineHeader"
-            name="Lifeline header height"
-            type="float">
-      </layoutOption>
-      <layoutOption
-            advanced="false"
-            appliesTo="parents"
-            class="de.cau.cs.kieler.papyrus.sequence.p4sorting.LifelineSortingStrategy"
-            default="INTERACTIVE"
-            description="The sorting strategy that is used to order the lifelines horizontally."
-            id="de.cau.cs.kieler.papyrus.sequence.lifelineSorting"
-            name="Lifeline sorting"
-            type="enum">
-      </layoutOption>
-      <layoutOption
-            advanced="false"
-            appliesTo="parents"
-            class="de.cau.cs.kieler.papyrus.sequence.properties.LabelAlignment"
-            default="SOURCE_CENTER"
-            description="The strategy that is used to find the right horizontal position for message labels."
-            id="de.cau.cs.kieler.papyrus.sequence.labelAlignment"
-            name="Label alignment"
-            type="enum">
-      </layoutOption>
-      <layoutOption
-            appliesTo="parents"
-            default="5"
-            description="The offset between two nested areas."
-            id="de.cau.cs.kieler.papyrus.sequence.containmentOffset"
-            name="Containment offset"
-            type="int">
-      </layoutOption>
-      <layoutOption
-            advanced="true"
-            appliesTo="parents"
-            default="10"
-            description="Vertical position of lifeline headers."
-            id="de.cau.cs.kieler.papyrus.sequence.lifelineYPos"
-            name="Vertical lifeline position"
-            type="int">
-      </layoutOption>
-      <layoutOption
-            advanced="false"
-            appliesTo="parents"
-            default="50"
-            description="The horizontal spacing between two neighbored lifelines."
-            id="de.cau.cs.kieler.papyrus.sequence.lifelineSpacing"
-            name="Lifeline spacing"
-            type="float">
-      </layoutOption>
-      <layoutOption
-            appliesTo="parents"
-            default="25"
-            description="Height of the header of areas, such as combined fragments."
-            id="de.cau.cs.kieler.papyrus.sequence.areaHeader"
-            name="Area header height"
-            type="int">
-      </layoutOption>
-      <layoutOption
-            appliesTo="parents"
-            default="20"
-            description="The width of time observations."
-            id="de.cau.cs.kieler.papyrus.sequence.timeObservationWidth"
-            name="Time observation width"
-            type="int">
-      </layoutOption>
-      <layoutOption
-            advanced="false"
-            appliesTo="parents"
-            default="false"
-            description="Defines, if messages that are contained in areas, such as combined fragments, are given higher priority in the minimization process of message&apos;s length."
-            id="de.cau.cs.kieler.papyrus.sequence.groupAreas"
-            name="Group areas"
-            type="boolean">
-         <dependency
-               option="de.cau.cs.kieler.papyrus.sequence.lifelineSorting"
-               value="SHORT_MESSAGES">
-         </dependency>
-      </layoutOption>
-      <layoutOption
-            advanced="true"
-            appliesTo="parents"
-            class="de.cau.cs.kieler.papyrus.sequence.properties.CoordinateSystem"
-            default="KGRAPH"
-            description="The coordinate system the diagram's coordinates are computed for."
-            id="de.cau.cs.kieler.papyrus.sequence.coordinateSystem"
-            name="Coordinate System"
-            type="enum">
-      </layoutOption>
+      <provider
+            class="de.cau.cs.kieler.papyrus.sequence.properties.SequenceMetaDataProvider">
+      </provider>
    </extension>
 
 </plugin>
